hide the post answer button if the user is not logged in

--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -19,7 +19,9 @@
 		on <span>{{ question.created_dt }}</span>
 	    </small>
 	</blockquote>
+	{% if user.is_authenticated %}
 	<a class="btn" href="{% url bashoneliners.main.views.new_oneliner question.pk %}">Post a one-liner that answers this!</a>
+	{% endif %}
     </div>
     {% empty %}
     <p class="message">No matching questions.</p>
