--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,6 +10,8 @@
 
 {% block content %}
 
+<h1>bashoneliners.com</h1>
+
 <p>Welcome to <strong>bashoneliners.com</strong>, a place for practical or just pure awesome bash <em>one-liners</em> or shell script tips and tricks for GNU Linux, UNIX or BSD systems.
 You can post a one-liner and share with the world,
 or browse and search the ones contributed by others.</p>
