--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+<h1>Login</h1>
+
 <p>Choose an OpenID provider to login:</p>
 
 <form id="openid-form" method="post" action="/openid/login/"><div>
