--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -10,7 +10,9 @@
 
 {% block content %}
 
-<p>Our Mission Statement is the foundation or definition of this website project.</p>
+<h1>Mission statement</h1>
+
+<p>This "mission statement" is the foundation of our website project.</p>
 
 <dl class="mission">
     <dt>MISSION</dt>
@@ -28,6 +30,6 @@
 
 </dl>
 
-<p>If you are interested in participating in this open-source project, head over to the <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> page.</p>
+<p>If you are interested in joining this open-source project, head over to the <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> page.</p>
 
 {% endblock %}
