--- a/templates/main/sourcecode.html
+++ b/templates/main/sourcecode.html
@@ -10,6 +10,8 @@
 
 {% block content %}
 
+<h1>Source code</h1>
+
 <p>This is an open-source project, and we are looking for contributors. You can find the source code here:</p>
 <p><a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a></p>
 
@@ -42,6 +44,6 @@ git clone git@github.com:titan2x/bashoneliners.git
 
 </dl>
 
-<p>Please also read our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a>, as it is the foundation of this project.</p>
+<p>Please also read our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a>, as it is the foundation of our project.</p>
 
 {% endblock %}
