--- a/templates/main/top_n.html
+++ b/templates/main/top_n.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
-{% block pagetitle %}top 50{% endblock %}
+{% block pagetitle %}Top 50{% endblock %}
 
 {% block keywords %}{% endblock %}
 
 {% block description %}{% endblock %}
 
 {% block content %}
+
+<h1>Top 50</h1>
 
 {% include 'main/oneliners.html' %}
 
