--- a/templates/main/wishlist.html
+++ b/templates/main/wishlist.html
@@ -10,6 +10,8 @@
 
 {% block content %}
 
+<h1>Wish list</h1>
+
 <div style="margin-bottom: 2em">
 
 <p>Are you looking for a one-liner for some purpose and it's not on the site yet? (Surely you searched well, right?)
