--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -10,6 +10,8 @@
 
 {% block content %}
 
+<h1>{{ form.title }}</h1>
+
 {% if question %}
 <div class="alert-message block-message info">
     <p>This one-liner will be linked to the following question as a possible answer:</p>
