changed model, renamed WishListAnswer.answer to WishListAnswer.oneliner because thats what it is

--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -29,7 +29,7 @@
 	    <h3>Proposed answers</h3>
 	    <div class="oneliners">
 	    {% for answer in question.wishlistanswer_set.all %}
-	    {% with answer.answer as oneliner %}
+	    {% with answer.oneliner as oneliner %}
 	    {% include 'elements/oneliner.html' %}
 	    {% endwith %}
 	    {% endfor %}
