better and more re-used elements/oneliner.html template

--- a/templates/elements/oneliner.html
+++ b/templates/elements/oneliner.html
@@ -1,3 +1,5 @@
+{% load nst %}
+
     <div class="oneliner">
 	<h3 class="summary">
 	    {% if user == oneliner.user %}
@@ -13,7 +15,25 @@
 	<pre>{% for line in oneliner.lines %}<span class="prompt">$ </span>{{ line }}<br/>{% endfor %}</pre>
 
 	<p class="author"><small>
-	&mdash; by <span>{{ oneliner.user.username }}</span>
+	&mdash; by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.username }}</span></a>
 	    on <span>{{ oneliner.created_dt }}</span>
 	</small></p>
+
+	{% if oneliner.explanation or oneliner.limitations %}
+	<div class="details hidden">
+	    {% if oneliner.explanation %}
+	    <div class="explanation">
+		<h3>Explanation</h3>
+		{{ oneliner.explanation|nst|safe }}
+	    </div>
+	    {% endif %}
+
+	    {% if oneliner.limitations %}
+	    <div class="limitations">
+		<h3>Limitations</h3>
+		{{ oneliner.limitations|nst|safe }}
+	    </div>
+	    {% endif %}
+	</div>
+	{% endif %}
     </div>
