added cancel button to all editing forms, though not perfect

--- a/templates/main/edit-profile.html
+++ b/templates/main/edit-profile.html
@@ -35,7 +35,7 @@
 	
 	<p class="actions">
 	    <input type="submit" name="action" value="Save" class="btn primary"/>
-	    <a href="{% url bashoneliners.main.views.profile %}" class="btn">Cancel</a>
+	    <a class="btn cancel" href="{{ next }}">Cancel</a>
 	</p>
     </div>
 </form>
