--- a/templates/elements/oneliner.html
+++ b/templates/elements/oneliner.html
@@ -15,7 +15,7 @@
 	<pre>{% for line in oneliner.lines %}<span class="prompt">$ </span>{{ line }}<br/>{% endfor %}</pre>
 
 	<p class="author"><small>
-	&mdash; by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.username }}</span></a>
+	&mdash; by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.display_name|default:oneliner.user.username }}</span></a>
 	    on <span>{{ oneliner.created_dt }}</span>
 	</small></p>
 
