--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -18,7 +18,7 @@
     <blockquote>
 	<p><a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a></p>
 	<small>
-	    by <a href="{% url bashoneliners.main.views.profile question.user.pk %}"><span>{{ question.user.username }}</span></a>
+	    by <a href="{% url bashoneliners.main.views.profile question.user.pk %}"><span>{{ question.user.hackerprofile.display_name|default:question.user.username }}</span></a>
 	    on <span>{{ question.created_dt }}</span>
 	</small>
     </blockquote>
