--- a/templates/html5.html
+++ b/templates/html5.html
@@ -25,7 +25,10 @@
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
+  <!--
   <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+  -->
+  <link rel="stylesheet" href="/media/css/bootstrap.min.css">
   <link rel="stylesheet" href="/media/css/bashoneliners.css">
   <!-- end CSS-->
 
