--- a/templates/elements/oneliner.html
+++ b/templates/elements/oneliner.html
@@ -12,7 +12,7 @@
 	    <a href="{% url bashoneliners.main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
 	</h3>
 
-	<pre>{% for line in oneliner.lines %}<span class="prompt">$ </span>{{ line }}<br/>{% endfor %}</pre>
+	<pre><span class="prompt">$ </span>{{ oneliner.line }}</pre>
 
 	<p class="author"><small>
 	&mdash; by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.display_name|default:oneliner.user.username }}</span></a>
