changed Wish List to Questions

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 			</ul>
 		    </li>
 		    <li><a href="{% url bashoneliners.main.views.index %}">Latest</a></li>
-		    <li><a href="{% url bashoneliners.main.views.wishlist %}">Wish list</a></li>
+		    <li><a href="{% url bashoneliners.main.views.wishlist %}">Questions</a></li>
 		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
 		</ul>
 
