--- a/templates/main/edit-question-form.html
+++ b/templates/main/edit-question-form.html
@@ -17,7 +17,7 @@
 	</div>
 	
 	<h3>Published</h3>
-	<div class="hint">If checked, the question will be visible on the <a href="{% url bashoneliners.main.views.wishlist %}">wish list page</a>.</div>
+	<div class="hint">If checked, the question will be visible on the <a href="{% url bashoneliners.main.views.wishlist %}">questions page</a>.</div>
 	<div class="input">
 	    <div class="error">{{ form.is_published.errors }}</div>
 	    <div class="is_published"><label>{{ form.is_published }} Published</label></div>
