--- a/templates/main/question.html
+++ b/templates/main/question.html
@@ -2,11 +2,11 @@
 
 {% load nst %}
 
-{% block pagetitle %}Wish list question{% endblock %}
+{% block pagetitle %}Question{% endblock %}
 
 {% block content %}
 
-<h1>Wish list question</h1>
+<h1>Question</h1>
 
 {% include 'main/questions.html' %}
 
