--- a/templates/main/edit-question.html
+++ b/templates/main/edit-question.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
-{% load nst %}
-
 {% block pagetitle %}{{ form.title }}{% endblock %}
 
 {% block keywords %}{% endblock %}
@@ -12,9 +10,15 @@
 
 <h1>{{ form.title }}</h1>
 
+<ul>
+    <li>After you post a question, it will be listed on the <a href="{% url bashoneliners.main.views.wishlist %}">Questions</a> page, and other users can suggest (possibly many) one-liners that answer it.</li>
+    <li>You will receive an email when someone suggests an answer. <em>(coming soon)</em></li>
+    <li>You can track your questions on your <a href="{% url bashoneliners.main.views.profile %}">profile</a> page, and mark them <strong>Answered</strong> so they no longer appear in the list of questions. <em>(coming soon)</em></li>
+</ul>
+
 {% include 'main/edit-question-form.html' %}
 
-{% endblock %}
+{% endblock content %}
 
 {% block ready %}
 	$('#id_summary').focus();
