questions can be clicked to go to the questions single page

--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -10,7 +10,7 @@
 	    {% endif %}
 	    </a>
 	    {% endif %}
-	    {{ question.summary }}
+	    <a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a>
 	</h3>
 	<blockquote>
 	    <p>{{ question.explanation }}</p>
