--- a/templates/main/sourcecode.html
+++ b/templates/main/sourcecode.html
@@ -38,7 +38,7 @@ bzr branch lp:bashoneliners
 svn checkout http://bashoneliners.googlecode.com/svn/ bashoneliners-read-only
 
 # using Git
-git clone git@github.com:titan2x/bashoneliners.git
+git clone https://github.com/titan2x/bashoneliners.git
 </pre>
     </dd>
 
