show related questions on all one-liner pages

--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -1,6 +1,6 @@
 <div class="oneliners">
     {% for oneliner in oneliners %}
-    {% include 'elements/oneliner.html' %}
+    {% include 'elements/oneliner-with-related.html' %}
     {% empty %}
     <p class="message">No matching one-liners.</p>
     {% endfor %}
