--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -1,42 +1,7 @@
 <div class="questions">
 
     {% for question in questions %}
-    <div class="question">
-	<h3 class="summary">
-	    {% if user == question.user %}
-	    <a class="editable" href="{% url bashoneliners.main.views.edit_question question.pk %}">&nbsp;
-	    {% if not question.is_published %}
-	    <span class="draft">(Not published!)</span>
-	    {% endif %}
-	    </a>
-	    {% endif %}
-	    <a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a>
-	</h3>
-	<blockquote>
-	    <p>{{ question.explanation }}</p>
-	    <small>
-		by <a href="{% url bashoneliners.main.views.profile question.user.pk %}"><span>{{ question.user.hackerprofile.display_name|default:question.user.username }}</span> </a>
-		on <span>{{ question.created_dt }}</span>
-	    </small>
-	</blockquote>
-
-	{% if user.is_authenticated %}
-	<a style="margin-bottom: 1em" class="btn" href="{% url bashoneliners.main.views.new_oneliner question.pk %}">Post a one-liner that answers this!</a>
-	{% endif %}
-
-	{% if question.wishlistanswer_set.all %}
-	<div class="alert-message block-message success">
-	    <h3>Proposed answers</h3>
-	    <div class="oneliners">
-	    {% for answer in question.wishlistanswer_set.all %}
-	    {% with answer.oneliner as oneliner %}
-	    {% include 'elements/oneliner.html' %}
-	    {% endwith %}
-	    {% endfor %}
-	    </div>
-	</div>
-	{% endif %}
-    </div>
+    {% include 'elements/question-with-related.html' %}
     {% empty %}
     <p class="message">No matching questions.</p>
     {% endfor %}
