--- a/templates/elements/oneliner-with-related.html
+++ b/templates/elements/oneliner-with-related.html
@@ -1,18 +1,18 @@
 {% extends 'elements/oneliner.html' %}
 
 {% block related %}
-	{% if oneliner.wishlistanswer_set.all %}
+	{% if oneliner.questions %}
+	{% with oneliner.questions as answers %}
 	<div class="alert-message block-message success">
 	    <h3>Related questions</h3>
 	    <div class="questions">
-	    {% for answer in oneliner.wishlistanswer_set.all %}
+	    {% for answer in answers %}
 	    {% with answer.question as question %}
-	    {% with false as showrelated %}
 	    {% include 'elements/question.html' %}
-	    {% endwith %}
 	    {% endwith %}
 	    {% endfor %}
 	    </div>
 	</div>
+	{% endwith %}
 	{% endif %}
 {% endblock %}
