--- a/templates/elements/question-with-related.html
+++ b/templates/elements/question-with-related.html
@@ -1,16 +1,18 @@
 {% extends 'elements/question.html' %}
 
 {% block related %}
-	{% if question.wishlistanswer_set.all %}
+	{% if question.oneliners %}
+	{% with question.oneliners as answers %}
 	<div class="alert-message block-message success">
 	    <h3>Proposed answers</h3>
 	    <div class="oneliners">
-	    {% for answer in question.wishlistanswer_set.all %}
+	    {% for answer in answers %}
 	    {% with answer.oneliner as oneliner %}
 	    {% include 'elements/oneliner.html' %}
 	    {% endwith %}
 	    {% endfor %}
 	    </div>
 	</div>
+	{% endwith %}
 	{% endif %}
 {% endblock %}
