--- a/templates/feed-description.html
+++ b/templates/feed-description.html
@@ -1,12 +1,12 @@
-{% load nst %}
+{% load markup %}
 <pre>{{ obj.line }}</pre>
 
 {% if obj.explanation %}
 <h3>Explanation</h3>
-<div>{{ obj.explanation|nst|safe|linebreaks }}</div>
+<div>{{ obj.explanation|markdown:"safe"|linebreaks }}</div>
 {% endif %}
 
 {% if obj.limitations %}
 <h3>Limitations</h3>
-<div>{{ obj.limitations|nst|safe|linebreaks }}</div>
+<div>{{ obj.limitations|markdown:"safe"|linebreaks }}</div>
 {% endif %}
