--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
-{% load nst %}
-
 {% block pagetitle %}{{ form.title }}{% endblock %}
 
 {% block keywords %}{% endblock %}
@@ -44,14 +42,17 @@
 	</div>
 	
 	<h3>Explanation<span class="required">*</span></h3>
-	<div class="hint">Try to use relevant keywords in the explanation, so that the one-liner is easier to find by search.</div>
+	<div class="hint">Try to use relevant keywords in the explanation, so that the one-liner is easier to find by search.
+	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="markdown" href="http://daringfireball.net/projects/markdown/syntax">markdown</a>.
+	</div>
 	<div class="input">
 	    <div class="error">{{ form.explanation.errors }}</div>
 	    <div class="explanation">{{ form.explanation }}</div>
 	</div>
 	
 	<h3>Limitations (optional)</h3>
-	<div class="hint">For example, if the one-liner might not work in some flavors of UNIX, etc.</div>
+	<div class="hint">For example, if the one-liner might not work in some flavors of UNIX, etc.
+	    <br/>Note: any html will be escaped, and the text will be formatted with <a class="markdown" href="http://daringfireball.net/projects/markdown/syntax">markdown</a>.
 	<div class="input">
 	    <div class="error">{{ form.limitations.errors }}</div>
 	    <div class="limitations">{{ form.limitations }}</div>
