updated jquery and added jquery-ui smoothness plugin

--- a/templates/html5.html
+++ b/templates/html5.html
@@ -28,6 +28,7 @@
   <!--
   <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
   -->
+  <link rel="stylesheet" href="/media/css/smoothness/jquery-ui-1.8.17.custom.css">
   <link rel="stylesheet" href="/media/css/bootstrap.min.css">
   <link rel="stylesheet" href="/media/css/bashoneliners.css">
   <!-- end CSS-->
@@ -59,7 +60,8 @@
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/media/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="/media/js/jquery-1.7.1.min.js"><\/script>')</script>
+  <script>document.write('<script src="/media/js/jquery-ui-1.8.17.custom.min.js"><\/script>')</script>
 
 
   <!-- scripts concatenated and minified via ant build script-->
