--- a/templates/elements/oneliner.html
+++ b/templates/elements/oneliner.html
@@ -2,14 +2,12 @@
 
     <div class="oneliner">
 	<h3 class="summary">
+	    <a href="{% url bashoneliners.main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
 	    {% if user == oneliner.user %}
 	    <a class="editable" href="{% url bashoneliners.main.views.edit_oneliner oneliner.pk %}">&nbsp;
-	    {% if not oneliner.is_published %}
-	    <span class="draft">(Not published!)</span>
-	    {% endif %}
+	    {% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}
 	    </a>
 	    {% endif %}
-	    <a href="{% url bashoneliners.main.views.oneliner oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
 	</h3>
 
 	<pre><span class="prompt">$ </span>{{ oneliner.line }}</pre>
