--- a/templates/elements/question.html
+++ b/templates/elements/question.html
@@ -1,13 +1,11 @@
     <div class="question">
 	<h3 class="summary">
+	    <a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a>
 	    {% if user == question.user %}
 	    <a class="editable" href="{% url bashoneliners.main.views.edit_question question.pk %}">&nbsp;
-	    {% if not question.is_published %}
-	    <span class="draft">(Not published!)</span>
-	    {% endif %}
+	    {% if not question.is_published %}<span class="draft">(Not published!)</span>{% endif %}
 	    </a>
 	    {% endif %}
-	    <a href="{% url bashoneliners.main.views.question question.pk %}">{{ question.summary }}</a>
 	</h3>
 	<blockquote>
 	    <p>{{ question.explanation }}</p>
