changed mailing list address

--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
     <p>Path: <strong>{{ request_path }}</strong></p>
     <p>If you think this is some kind of error, 
     please drop us an email at
-    <a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a>,
+    <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>,
     along with anything you might have done that may have caused the error.
     </p>
 </div>
