--- a/templates/500.html
+++ b/templates/500.html
@@ -8,11 +8,11 @@ misconfiguration and was unable to complete
 your request.</p>
 <p>Please check the mailing list to see if
 somebody is working on the problem right now or not:
-<a href="https://lists.launchpad.net/bashoneliners/">https://lists.launchpad.net/bashoneliners/</a>
+<a href="http://groups.google.com/group/bashoneliners/topics">http://groups.google.com/group/bashoneliners/topics</a>
 </p>
 <p>If there is no obvious sign of an ongoing issue,
 please email the team at
-<a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a>,
+<a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>,
 along with anything you might have done that may have caused the error.
 </p>
 </body></html>
