--- a/templates/main/sourcecode.html
+++ b/templates/main/sourcecode.html
@@ -13,7 +13,7 @@
 <p>This is an open-source project, and we are looking for contributors. You can find the source code here:</p>
 <p><a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a></p>
 
-<p>If you would like to participate in developing this site, please contact us at <a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a> and let's start the conversation!</p>
+<p>If you would like to participate in developing this site, please contact us at <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a> and let's start the conversation!</p>
 
 <dl class="sourcecode">
     <dt>Task management, upcoming features</dt>
@@ -22,20 +22,20 @@
     </dd>
 
     <dt>Mailing list address</dt>
-    <dd><a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a></dd>
+    <dd><a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a></dd>
 
     <dt>Mailing list public archive</dt>
-    <dd><a href="https://lists.launchpad.net/bashoneliners/">https://lists.launchpad.net/bashoneliners/</a></dd>
+    <dd><a href="http://groups.google.com/group/bashoneliners/topics">http://groups.google.com/group/bashoneliners/topics</a></dd>
 
     <dt>Get the source code</dt>
     <dd>
-	<pre># using Bazaar
+	<pre># using Bazaar (master)
 bzr branch lp:bashoneliners
 
 # using Subversion (read-only mirror)
 svn checkout http://bashoneliners.googlecode.com/svn/ bashoneliners-read-only
 
-# using Git
+# using Git (mirror)
 git clone https://github.com/titan2x/bashoneliners.git
 </pre>
     </dd>
